add pin, archive and unpin functionality
